--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Economics Researcher</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+            padding: 20px;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            margin-top: 10px;
+            text-align: center;
+        }
+        nav a {
+            margin: 0 15px;
+            color: #333;
+            text-decoration: none;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        .content {
+            margin-top: 20px;
+            background: #fff;
+            padding: 20px;
+        }
+        footer {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Your Name</h1>
+        <p>PhD Student in Economics at UCSD</p>
+    </header>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#research">Research</a>
+        <a href="#publications">Publications</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="container">
+        <section id="about" class="content">
+            <h2>About Me</h2>
+            <p>Brief introduction about yourself, your background, and your research interests.</p>
+        </section>
+        <section id="research" class="content">
+            <h2>Research</h2>
+            <p>Details about your research areas, projects, and any collaborative work.</p>
+        </section>
+        <section id="publications" class="content">
+            <h2>Publications</h2>
+            <p>List of your academic publications with links to the papers.</p>
+        </section>
+        <section id="contact" class="content">
+            <h2>Contact</h2>
+            <p>Contact information, such as email, office location, and social media links.</p>
+        </section>
+    </div>
+    <footer>
+        <p>&copy; 2024 Your Name</p>
+    </footer>
+</body>
+</html>
