--- a/index.html
+++ b/index.html
@@ -18,19 +18,23 @@
             margin: auto;
             overflow: hidden;
             padding: 20px;
+            max-width: 800px;
+            background: #fff;
         }
         header {
-            background: #333;
-            color: #fff;
-            padding: 10px 0;
             text-align: center;
+            padding: 50px 0;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
         }
         nav {
-            margin-top: 10px;
             text-align: center;
+            margin: 20px 0;
         }
         nav a {
-            margin: 0 15px;
+            margin: 0 10px;
             color: #333;
             text-decoration: none;
         }
@@ -38,16 +42,12 @@
             text-decoration: underline;
         }
         .content {
-            margin-top: 20px;
-            background: #fff;
-            padding: 20px;
+            margin: 20px 0;
         }
         footer {
-            background: #333;
-            color: #fff;
             text-align: center;
-            padding: 10px 0;
-            margin-top: 20px;
+            padding: 20px 0;
+            background: #f4f4f4;
         }
     </style>
 </head>
