--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Economics Researcher</title>
+    <title>Your Name - Research</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Baskerville', serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
@@ -54,30 +54,17 @@
 <body>
     <header>
         <h1>Your Name</h1>
-        <p>PhD Student in Economics at UCSD</p>
     </header>
     <nav>
-        <a href="#about">About</a>
-        <a href="#research">Research</a>
-        <a href="#publications">Publications</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="research.html">Research</a>
+        <a href="cv.html">CV</a>
+        <a href="other.html">Other</a>
     </nav>
     <div class="container">
-        <section id="about" class="content">
-            <h2>About Me</h2>
-            <p>Brief introduction about yourself, your background, and your research interests.</p>
-        </section>
         <section id="research" class="content">
             <h2>Research</h2>
             <p>Details about your research areas, projects, and any collaborative work.</p>
-        </section>
-        <section id="publications" class="content">
-            <h2>Publications</h2>
-            <p>List of your academic publications with links to the papers.</p>
-        </section>
-        <section id="contact" class="content">
-            <h2>Contact</h2>
-            <p>Contact information, such as email, office location, and social media links.</p>
         </section>
     </div>
     <footer>
