--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Research</title>
+    <title>Your Name - Economics Researcher</title>
     <style>
         body {
             font-family: 'Baskerville', serif;
@@ -49,11 +49,22 @@
             padding: 20px 0;
             background: #f4f4f4;
         }
+        .profile-pic {
+            display: block;
+            margin: 20px auto;
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+        }
+        .contact-info {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>Your Name</h1>
+        <p>PhD Student in Economics at UCSD</p>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -62,13 +73,17 @@
         <a href="other.html">Other</a>
     </nav>
     <div class="container">
-        <section id="research" class="content">
-            <h2>Research</h2>
-            <p>Details about your research areas, projects, and any collaborative work.</p>
+        <section id="home" class="content">
+            <img src="your-photo.jpg" alt="Your Name" class="profile-pic">
+            <p>I am an PhD Student in Economics at UC San Diego. My research interests are in labor economics. 
+            <div class="contact-info">
+                <p>Email: jacbrmorris [at] ucsd [dot] edu</p>
+                <p>Social Media Links</p>
+            </div>
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Jacob Morris</p>
     </footer>
 </body>
 </html>
