--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
     </nav>
     <div class="container">
         <section id="home" class="content">
-            <img src="your-photo.jpg" alt="Your Name" class="profile-pic">
+            <img src="Headshot.jpg" alt="Your Name" class="profile-pic">
             <p>I am an PhD Student in Economics at UC San Diego. My research interests are in labor economics. 
             <div class="contact-info">
-                <p>Email: jacbrmorris [at] ucsd [dot] edu</p>
-                <p>Social Media Links</p>
+            <p>Email: jacobrmorris [at] ucsd [dot] edu</p>
+            <p>Social Media Links</p>
             </div>
         </section>
     </div>
