--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
         .profile-pic {
             display: block;
             margin: 20px auto;
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
+            max-width: 100%;
+            height: auto;
         }
         .contact-info {
             text-align: center;
@@ -74,16 +73,17 @@
     </nav>
     <div class="container">
         <section id="home" class="content">
-            <img src="Headshot.jpg" alt="Your Name" class="profile-pic">
-            <p>I am an PhD Student in Economics at UC San Diego. My research interests are in labor economics. 
+            <img src="Headshot.jpeg" alt="Your Name" class="profile-pic">
+            <p>A brief personal description about your academic interests and background.</p>
             <div class="contact-info">
-            <p>Email: jacobrmorris [at] ucsd [dot] edu</p>
-            <p>Social Media Links</p>
+                <p>Email: your.email@ucsd.edu</p>
+                <p>Office: Your Office Location</p>
+                <p>Social Media Links</p>
             </div>
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 Jacob Morris</p>
+        <p>&copy; 2024 Your Name</p>
     </footer>
 </body>
 </html>
