--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </nav>
     <div class="container">
         <section id="home" class="content">
-            <img src="Headshot.jpeg" alt="Your Name" class="profile-pic">
+            <img src="Headshot.jpg" alt="Jacob Morris" class="profile-pic">
             <p>A brief personal description about your academic interests and background.</p>
             <div class="contact-info">
                 <p>Email: your.email@ucsd.edu</p>
