--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Economics Researcher</title>
+    <title>Jacob Morris - Economics Researcher</title>
     <style>
         body {
             font-family: 'Baskerville', serif;
@@ -16,21 +16,20 @@
         .container {
             width: 80%;
             margin: auto;
-            overflow: hidden;
             padding: 20px;
             max-width: 800px;
-            background: #fff;
+            background: #f4f4f4;
         }
         header {
-            text-align: center;
-            padding: 50px 0;
+            text-align: left;
+            padding: 20px 0;
         }
         header h1 {
             margin: 0;
             font-size: 2.5em;
         }
         nav {
-            text-align: center;
+            text-align: left;
             margin: 20px 0;
         }
         nav a {
@@ -42,27 +41,28 @@
             text-decoration: underline;
         }
         .content {
+            display: flex;
+            align-items: center;
             margin: 20px 0;
         }
+        .profile-pic {
+            margin-right: 20px;
+            max-width: 150px;
+            height: auto;
+        }
         footer {
-            text-align: center;
+            text-align: left;
             padding: 20px 0;
             background: #f4f4f4;
         }
-        .profile-pic {
-            display: block;
-            margin: 20px auto;
-            max-width: 100%;
-            height: auto;
-        }
         .contact-info {
-            text-align: center;
+            text-align: left;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Jacob Morris</h1>
         <p>PhD Student in Economics at UCSD</p>
     </header>
     <nav>
@@ -74,16 +74,18 @@
     <div class="container">
         <section id="home" class="content">
             <img src="Headshot.jpg" alt="Jacob Morris" class="profile-pic">
-            <p>A brief personal description about your academic interests and background.</p>
-            <div class="contact-info">
-                <p>Email: your.email@ucsd.edu</p>
-                <p>Office: Your Office Location</p>
-                <p>Social Media Links</p>
+            <div>
+                <p>A brief personal description about your academic interests and background.</p>
+                <div class="contact-info">
+                    <p>Email: your.email@ucsd.edu</p>
+                    <p>Office: Your Office Location</p>
+                    <p>Social Media Links</p>
+                </div>
             </div>
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Jacob Morris</p>
     </footer>
 </body>
 </html>
