--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             background: #f4f4f4;
         }
         header {
-            text-align: left;
+            text-align: center;
             padding: 20px 0;
         }
         header h1 {
@@ -29,7 +29,7 @@
             font-size: 2.5em;
         }
         nav {
-            text-align: left;
+            text-align: center;
             margin: 20px 0;
         }
         nav a {
@@ -42,21 +42,21 @@
         }
         .content {
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             margin: 20px 0;
         }
         .profile-pic {
             margin-right: 20px;
-            max-width: 150px;
+            max-width: 300px;
             height: auto;
         }
-        footer {
+        .text-content {
             text-align: left;
+        }
+        footer {
+            text-align: center;
             padding: 20px 0;
             background: #f4f4f4;
-        }
-        .contact-info {
-            text-align: left;
         }
     </style>
 </head>
@@ -74,7 +74,7 @@
     <div class="container">
         <section id="home" class="content">
             <img src="Headshot.jpg" alt="Jacob Morris" class="profile-pic">
-            <div>
+            <div class="text-content">
                 <p>A brief personal description about your academic interests and background.</p>
                 <div class="contact-info">
                     <p>Email: your.email@ucsd.edu</p>
