--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         header h1 {
             margin: 0;
             font-size: 2.5em;
+            font-weight: normal;
         }
         nav {
             text-align: center;
@@ -63,7 +64,6 @@
 <body>
     <header>
         <h1>Jacob Morris</h1>
-        <p>PhD Student in Economics at UCSD</p>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -77,9 +77,7 @@
             <div class="text-content">
                 <p>A brief personal description about your academic interests and background.</p>
                 <div class="contact-info">
-                    <p>Email: your.email@ucsd.edu</p>
-                    <p>Office: Your Office Location</p>
-                    <p>Social Media Links</p>
+                    <p>Email: jacobrmorris [at] ucsd [dot] edu</p>
                 </div>
             </div>
         </section>
