--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             margin: 0 10px;
             color: #333;
             text-decoration: none;
+            font-size: 1.5em;
         }
         nav a:hover {
             text-decoration: underline;
