--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             margin: 0 10px;
             color: #333;
             text-decoration: none;
-            font-size: 1.25em;
+            font-size: 1.15em;
         }
         nav a:hover {
             text-decoration: underline;
@@ -49,8 +49,9 @@
         }
         .profile-pic {
             margin-right: 20px;
-            max-width: 300px;
-            height: auto;
+            max-width: 400px; /* Adjust the max-width as needed */
+            height: 300px; /* Adjust the height as needed */
+            object-fit: cover;
         }
         .text-content {
             text-align: left;
