--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
         }
         .profile-pic {
             margin-right: 20px;
-            max-width: 400px; /* Adjust the max-width as needed */
-            height: 300px; /* Adjust the height as needed */
+            max-width: 350px; /* Adjust the max-width as needed */
+            height: 262.5px; /* Adjust the height as needed */
             object-fit: cover;
+            clip-path: polygon(10% 0, 90% 0, 100% 100%, 0 100%);
         }
         .text-content {
             text-align: left;
