--- a/index.html
+++ b/index.html
@@ -26,21 +26,18 @@
         }
         header h1 {
             margin: 0;
-            font-size: 2.5em;
+            font-size: 2em; /* Adjust font size as needed */
             font-weight: normal;
         }
         .name-wrapper {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 20px;
-        }
-        .name {
-            font-size: 2em;
+            margin-bottom: 10px; /* Adjust margin as needed */
         }
         .sub-pages {
             text-align: right;
-            font-size: 1.2em;
+            font-size: 1.2em; /* Adjust font size as needed */
         }
         nav a {
             margin-left: 20px;
@@ -74,9 +71,7 @@
 <body>
     <header>
         <div class="name-wrapper">
-            <div class="name">
-                <h1>Jacob Morris</h1>
-            </div>
+            <h1>Jacob Morris</h1>
             <div class="sub-pages">
                 <a href="cv.html">CV</a>
                 <a href="research.html">Research</a>
