--- a/index.html
+++ b/index.html
@@ -30,14 +30,19 @@
             font-weight: normal;
         }
         .name-wrapper {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+            text-align: center;
             margin-bottom: 10px; /* Adjust margin as needed */
         }
         .sub-pages {
-            text-align: right;
+            text-align: center;
             font-size: 1.2em; /* Adjust font size as needed */
+        }
+        .sub-pages a {
+            color: #333; /* Adjust link color */
+            text-decoration: none;
+        }
+        .sub-pages a:hover {
+            text-decoration: underline;
         }
         nav a {
             margin-left: 20px;
