--- a/index.html
+++ b/index.html
@@ -34,22 +34,15 @@
             margin-bottom: 10px; /* Adjust margin as needed */
         }
         .sub-pages {
-            text-align: center;
+            text-align: right;
             font-size: 1.2em; /* Adjust font size as needed */
         }
         .sub-pages a {
             color: #333; /* Adjust link color */
             text-decoration: none;
+            margin-left: 10px; /* Adjust spacing between links */
         }
         .sub-pages a:hover {
-            text-decoration: underline;
-        }
-        nav a {
-            margin-left: 20px;
-            color: #333;
-            text-decoration: none;
-        }
-        nav a:hover {
             text-decoration: underline;
         }
         .content {
@@ -77,11 +70,11 @@
     <header>
         <div class="name-wrapper">
             <h1>Jacob Morris</h1>
-            <div class="sub-pages">
-                <a href="cv.html">CV</a>
-                <a href="research.html">Research</a>
-                <a href="other.html">Other</a>
-            </div>
+        </div>
+        <div class="sub-pages">
+            <a href="cv.html">CV</a>
+            <a href="research.html">Research</a>
+            <a href="other.html">Other</a>
         </div>
     </header>
     <div class="container">
