--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
         header {
             text-align: center;
-            padding: 20px 0;
+            padding: 40px 0 20px; /* Adjusted padding */
         }
         header h1 {
             margin: 0;
@@ -37,7 +37,6 @@
             margin: 0 10px;
             color: #333;
             text-decoration: none;
-            font-size: 1.15em;
         }
         nav a:hover {
             text-decoration: underline;
@@ -52,6 +51,7 @@
             max-width: 400px; /* Adjust the max-width as needed */
             height: 300px; /* Adjust the height as needed */
             object-fit: cover;
+            clip-path: polygon(10% 0, 90% 0, 100% 100%, 0 100%);
         }
         .text-content {
             text-align: left;
