--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         }
         .profile-pic {
             margin-right: 20px;
-            max-width: 400px; /* Adjust the max-width as needed */
-            height: 300px; /* Adjust the height as needed */
+            max-width: 350px; /* Adjust the max-width as needed */
+            height: 262.5px; /* Adjust the height as needed */
             object-fit: cover;
         }
         .text-content {
@@ -76,7 +76,7 @@
         <section id="home" class="content">
             <img src="Headshot.jpg" alt="Jacob Morris" class="profile-pic">
             <div class="text-content">
-                <p>A brief personal description about your academic interests and background.</p>
+                <p>I am an Economics PhD student at the University of California San Diego (UCSD). My research interests are in labor economics. </p>
                 <div class="contact-info">
                     <p>Email: jacobrmorris [at] ucsd [dot] edu</p>
                 </div>
