--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             padding: 20px;
             max-width: 800px;
             background: #f4f4f4;
+            border: 1px solid #ccc; /* Border around the container */
         }
         header {
             text-align: center;
