--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             padding: 0;
             background-color: #f4f4f4;
             color: #333;
-            border: 1px solid #ccc; /* Border around the container */
         }
         .container {
             width: 80%;
-            margin: auto;
+            margin: 20px auto; /* Adjusted margin to create space between border and browser edge */
             padding: 20px;
             max-width: 800px;
             background: #f4f4f4;
+            border: 1px solid #ccc; /* Border around the content */
         }
         header {
             text-align: center;
