--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
         }
         .container {
             width: 80%;
-            margin: 20px auto; /* Adjusted margin to create space between border and browser edge */
+            margin: 20px; 
             padding: 20px;
             max-width: 800px;
             background: #f4f4f4;
-            border: 1px solid #ccc; /* Border around the content */
         }
         header {
             text-align: center;
