--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             <img src="Headshot.jpg" alt="Jacob Morris" class="profile-pic">
             <div class="text-content">
                 <p>I am an Economics PhD student at the University of California San Diego (UCSD). My research interests are in labor economics. </p>
+                <p> </p>
+                <p>My research interests are in labor economics. </p>
                 <div class="contact-info">
                     <p>Email: jacobrmorris [at] ucsd [dot] edu</p>
                 </div>
