--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         .container {
             width: 80%;
-            margin: 20px; 
+            margin: auto; 
             padding: 20px;
             max-width: 800px;
             background: #f4f4f4;
@@ -77,7 +77,7 @@
         <section id="home" class="content">
             <img src="Headshot.jpg" alt="Jacob Morris" class="profile-pic">
             <div class="text-content">
-                <p>I am an Economics PhD student at the University of California San Diego (UCSD). My research interests are in labor economics. </p>
+                <p>I am an Economics PhD student at the University of California San Diego (UCSD).</p>
                 <p> </p>
                 <p>My research interests are in labor economics. </p>
                 <div class="contact-info">
