--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </head>
 <body>
     <header>
-        <h1>Jacob Morris</h1>
+        <h1>Jacob R. Morris</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
