--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="research.html">Research</a>
-        <a href="cv.pdf">CV</a>
+        <a href="JacobMorris_cv.pdf">CV</a>
         <a href="other.html">Other</a>
     </nav>
     <div class="container">
