remove "other" page.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <a href="index.html">Home</a>
         <a href="research.html">Research</a>
         <a href="JacobMorris_cv.pdf">CV</a>
-        <a href="other.html">Other</a>
+        <!-- <a href="other.html">Other</a> --> <!-- Temporarily unpublished -->   
     </nav>
     <div class="container">
         <section id="home" class="content">
