--- a/research.html
+++ b/research.html
@@ -1,1 +1,107 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Research - Jacob Morris</title>
+    <style>
+        body {
+            font-family: 'Baskerville', serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            padding: 20px;
+            max-width: 800px;
+            background: #f4f4f4;
+            border: 1px solid #ccc;
+        }
+        header {
+            text-align: center;
+            padding: 40px 0 20px;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+            font-weight: normal;
+        }
+        nav {
+            text-align: center;
+            margin: 20px 0;
+        }
+        nav a {
+            margin: 0 10px;
+            color: #333;
+            text-decoration: none;
+            font-size: 1.15em;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        .content {
+            margin: 20px 0;
+        }
+        .research-section {
+            margin: 40px 0;
+        }
+        .research-section h2 {
+            margin-bottom: 20px;
+            font-size: 1.8em;
+        }
+        .paper-title {
+            font-size: 1.5em;
+            margin: 20px 0 10px;
+        }
+        .paper-authors a {
+            color: #333;
+            text-decoration: none;
+        }
+        .paper-authors a:hover {
+            text-decoration: underline;
+        }
+        .paper-images img {
+            max-width: 100%;
+            height: auto;
+            margin: 10px 0;
+        }
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            background: #f4f4f4;
+            border-top: 1px solid #ccc;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Jacob Morris</h1>
+    </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="research.html">Research</a>
+        <a href="cv.pdf" target="_blank">CV</a>
+        <!-- <a href="other.html">Other</a> -->
+    </nav>
+    <div class="container">
+        <div class="content">
+            <section class="research-section">
+                <h2>Works in Progress</h2>
+                <div class="paper-images">
+                    <img src="image1.jpg" alt="Image from Estimating the Cost of Advance Notice">
+                    <img src="image2.jpg" alt="Image from Estimating the Cost of Advance Notice">
+                </div>
+                <div class="paper-title">Estimating the Cost of Advance Notice</div>
+                <div class="paper-authors">with <a href="https://sarahbana.com" target="_blank">Sarah Bana</a></div>
+            </section>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2024 Jacob Morris</p>
+    </footer>
+</body>
+</html>
