--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research - Jacob Morris</title>
+    <title>Research</title>
     <style>
         body {
             font-family: 'Baskerville', serif;
@@ -79,7 +79,7 @@
 </head>
 <body>
     <header>
-        <h1>Jacob Morris</h1>
+        <h1>Jacob R. Morris</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -92,8 +92,8 @@
             <section class="research-section">
                 <h2>Works in Progress</h2>
                 <div class="paper-images">
-                    <img src="image1.jpg" alt="Image from Estimating the Cost of Advance Notice">
-                    <img src="image2.jpg" alt="Image from Estimating the Cost of Advance Notice">
+                    <img src="works_in_progress/layoff_binscatter.pdf" alt="Image from Estimating the Cost of Advance Notice">
+                    <img src="works_in_progress/layoff_mass_l" alt="Image from Estimating the Cost of Advance Notice">
                 </div>
                 <div class="paper-title">Estimating the Cost of Advance Notice</div>
                 <div class="paper-authors">with <a href="https://sarahbana.com" target="_blank">Sarah Bana</a></div>
