--- a/research.html
+++ b/research.html
@@ -90,7 +90,7 @@
     <div class="container">
         <div class="content">
             <section class="research-section">
-                <h2>Works in Progress</h2>
+                <h2>Selected Works in Progress</h2>
                 <div class="paper-images">
                     <img src="works_in_progress/layoff_binscatter.pdf" alt="Image from Estimating the Cost of Advance Notice">
                     <img src="works_in_progress/layoff_mass_l" alt="Image from Estimating the Cost of Advance Notice">
