--- a/research.html
+++ b/research.html
@@ -95,7 +95,7 @@
                     <img src="works_in_progress/layoff_binscatter.pdf" alt="Image from Estimating the Cost of Advance Notice">
                     <img src="works_in_progress/layoff_mass_l" alt="Image from Estimating the Cost of Advance Notice">
                 </div>
-                <div class="paper-title">Estimating the Cost of Advance Notice</div>
+                <div class="paper-title">Estimating the Cost of Advance Notice for Firms Conducting Mass Layoffs</div>
                 <div class="paper-authors">with <a href="https://sarahbana.com" target="_blank">Sarah Bana</a></div>
             </section>
         </div>
