--- a/research.html
+++ b/research.html
@@ -93,7 +93,7 @@
                 <h2>Selected Works in Progress</h2>
                 <div class="paper-images">
                     <img src="works_in_progress/layoff_binscatter.pdf" alt="Image from Estimating the Cost of Advance Notice">
-                    <img src="works_in_progress/layoff_mass_l" alt="Image from Estimating the Cost of Advance Notice">
+                    <img src="works_in_progress/layoff_mass_l.pdf" alt="Image from Estimating the Cost of Advance Notice">
                 </div>
                 <div class="paper-title">Estimating the Cost of Advance Notice for Firms Conducting Mass Layoffs</div>
                 <div class="paper-authors">with <a href="https://sarahbana.com" target="_blank">Sarah Bana</a></div>
