--- a/research.html
+++ b/research.html
@@ -64,6 +64,10 @@
         .paper-authors a:hover {
             text-decoration: underline;
         }
+        .paper-abstract {
+            margin-top: 10px;
+            opacity: 0.8; /* Adjust the opacity value as needed */
+        }
         .paper-images img {
             max-width: 100%;
             height: auto;
