--- a/research.html
+++ b/research.html
@@ -60,6 +60,7 @@
         .paper-authors a {
             color: #333;
             text-decoration: none;
+            font-size: 1.15em;
         }
         .paper-authors a:hover {
             text-decoration: underline;
