--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@
         }
         .paper-title {
             font-size: 1.5em;
-            margin: 20px 0 8px;
+            margin: 20px 0 2px;
         }
         .paper-authors a {
             color: #333;
@@ -64,13 +64,17 @@
         .paper-authors a:hover {
             text-decoration: underline;
         }
+        .paper-abstract {
+             margin-top: 10px;
+             opacity: 0.8; /* Adjust the opacity value as needed */
+        }
         .paper-images {
             display: flex; /* Use flexbox for horizontal alignment */
             justify-content: space-between; /* Distribute items evenly */
             margin-bottom: 20px; /* Optional margin for spacing */
         }
         .paper-images img {
-            width: 48%; /* Adjust width as needed */
+            width: 50%; /* Adjust width as needed */
             height: auto;
         }
         footer {
