--- a/research.html
+++ b/research.html
@@ -90,7 +90,7 @@
         <h1>Jacob R. Morris</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
         <a href="research.html">Research</a>
         <a href="cv.pdf" target="_blank">CV</a>
         <!-- <a href="other.html">Other</a> -->
