--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h1>Jacob R. Morris</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="/">Home</a> 
         <a href="research.html">Research</a>
         <a href="JacobMorris_cv.pdf">CV</a>
         <!-- <a href="other.html">Other</a> --> <!-- Temporarily unpublished -->   
