--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                 <p>I am an Economics PhD student at the University of California San Diego (UCSD).</p>
                 <p>My research interests are in labor economics.</p>
                 <div class="contact-info">
-                    <p><i>Email:</i>  jacobrmorris [at] ucsd [dot] edu</p>
+                    <p><i>Feel free to contact me at:</i></p> 
+                    <p>jacobrmorris [at] ucsd [dot] edu</p>
                 </div>
             </div>
         </section>
