--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <nav>
         <a href="/">Home</a> 
         <a href="research.html">Research</a>
-        <a href="JacobMorris_cv.pdf">CV</a>
+        <a href="JacobMorris_cv.pdf" target="_blank">CV</a>
         <!-- <a href="other.html">Other</a> --> <!-- Temporarily unpublished -->   
     </nav>
     <div class="container">
