--- a/research.html
+++ b/research.html
@@ -92,8 +92,8 @@
     <nav>
         <a href="/">Home</a> 
         <a href="research.html">Research</a>
-        <a href="cv.pdf" target="_blank">CV</a>
-        <!-- <a href="other.html">Other</a> -->
+        <a href="JacobMorris_cv.pdf">CV</a>
+        <!-- <a href="other.html">Other</a> --> <!-- Temporarily unpublished -->   
     </nav>
     <div class="container">
         <div class="content">
